feat: Atualiza o HTML e CSS do portfólio, adiciona meta tags e otimiza fontes; implementa lazy loading nos componentes da página inicial; melhora a configuração do Vite para otimização de build

--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vinicius Butrico</title>
     <link rel="icon" type="image/svg+xml" href="/3d-computer.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfólio de Vinicius Butrico - Desenvolvedor Full Stack Junior especializado em React, Vue.js, Node.js e Spring Boot" />
+    <title>Vinicius Butrico - Desenvolvedor Full Stack</title>
+    <link rel="stylesheet" href="/src/index.css">
+    <!-- Preload critical fonts -->
+    <link rel="preload" href="/src/assets/fonts/Neocrash.ttf" as="font" type="font/ttf" crossorigin />
+    
+    <!-- Preconnect to improve performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <link rel="stylesheet" href="/src/index.css">
   </body>
 </html>
